js/js.translator/testData/incremental/invalidation/multiPlatformClashFileNames/lib1/js/l1.1.kt
inline fun jsFun() = 1
